# mcp-doc-builder

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: publish-pypi.yml
server/: pyproject.toml
server/src/doc_builder/: __init__.py  __main__.py  config.py  main.py  utils.py
server/src/doc_builder/cli/: __init__.py  index.py  presets.py  setup.py  status.py
server/src/doc_builder/crawler/: __init__.py  agent.py  parser.py  spider.py
server/src/doc_builder/kg/: __init__.py  apply_schema.py  neo4j.py  repo.py  schema.cypher
server/src/doc_builder/llm/: __init__.py  client.py  schemas.py
server/src/doc_builder/llm/prompts/: __init__.py  chunker.py  crawler_agent.py  ontology.py
server/src/doc_builder/mcp/: __init__.py  prompts.py  resources.py  tools.py
server/src/doc_builder/ontology/: __init__.py  extractor.py  linker.py  metatag.py
server/src/doc_builder/security/: __init__.py  auth.py  origin.py
server/src/doc_builder/vector/: __init__.py  chunker.py  embedder.py  indexer.py
