[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-builder-mcp"
version = "0.1.0"
description = "MCP Server for intelligent documentation scraping, vectorization, and semantic search with dynamic ontology extraction"
readme = "../README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "NeuralCode Team" }
]
keywords = ["mcp", "documentation", "scraping", "vector-search", "knowledge-graph", "neo4j", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # MCP Protocol
    "mcp>=1.0.0",
    
    # Database
    "neo4j>=5.0.0",
    
    # LLM Integration
    "litellm>=1.40.0",
    
    # Data Validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Environment
    "python-dotenv>=1.0.0",
    
    # Server
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    
    # Web Scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "aiohttp>=3.9.0",
    "trafilatura>=1.8.0",
    
    # Utilities
    "tenacity>=8.2.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0",
    
    # Google Auth (for Gemini)
    "google-auth>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Hexecu/mcp-doc-builder"
Documentation = "https://github.com/Hexecu/mcp-doc-builder#readme"
Repository = "https://github.com/Hexecu/mcp-doc-builder"
Issues = "https://github.com/Hexecu/mcp-doc-builder/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]
# Install with: pip install -e ".[js]"
# Then run: playwright install chromium
js = [
    "playwright>=1.40.0",
]
all = [
    "doc-builder-mcp[dev,js]",
]

[project.scripts]
doc-mcp = "doc_builder.main:main"
doc-mcp-setup = "doc_builder.cli.setup:main"
doc-mcp-status = "doc_builder.cli.status:main"
doc-mcp-index = "doc_builder.cli.index:main"

[tool.hatch.build.targets.wheel]
packages = ["src/doc_builder"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
